fixed exploreJournals button spacing and fixed gearList form alignment

--- a/app/assets/stylesheets/gear_lists.css.scss
+++ b/app/assets/stylesheets/gear_lists.css.scss
@@ -63,10 +63,11 @@ $medium-grey: #bfc0c0;
 	}
 }
 
-#form {
+#add_gear_items {
 	text-align: center;
 	p {
 		margin: 3rem 0 0 0;
+		color: $medium-grey;
 	}
 	input[type="text"] {
 		margin: .8rem auto 0 auto;
@@ -86,7 +87,7 @@ $medium-grey: #bfc0c0;
 		margin: 0 auto;
 	}
 }
-	#form {
+	#add_gear_items {
 		input[type="text"] {
 		width: 50%;
 		}
