--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -268,6 +268,9 @@ $medium-grey: #bfc0c0;
 		a {
 			margin-left: 2.5rem;
 		}
+		.button {
+			margin-left: 0;
+		}
   	h1 {
 			color: $white;
 			font-weight: 300;
